--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -2,6 +2,9 @@
     width: 100%;
     display: flex;
     gap: 20px;
+    border-bottom: 1px solid #e0e0e0;
+    padding-bottom: 35px;
+    cursor: pointer;
 }
 
 .picture {
@@ -9,4 +12,34 @@
     width: 246px;
     height: 180px;
     object-fit: cover;
+}
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.title {
+    color: var(--dark-color);
+    font-size: 30px;
+    font-weight: 700;
+}
+.year {
+    border-radius: 16px;
+    background: #142850;
+    padding: 0px 10px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 900;
+    margin-right: 26px;
+    line-height: 60px;
+}
+.tag {
+    color: var(--light);
+    font-size: 20px;
+    font-weight: 400;
+}
+.text {
+    color: var(--dark-color);
+    font-size: 16px;
+    font-weight: 400;
 }
