--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -23,8 +23,6 @@
 }
 .tags-main {
     color: var(--light);
-    font-size: 20px;
-    font-weight: 400;
 }
 .decor {
     width: 1px;
@@ -53,4 +51,34 @@
     color: var(--dark-color);
     font-size: 18px;
     font-weight: 400;
+}
+
+/* adaptive */
+
+@media (max-width: 700px) {
+    .post-main {
+    }
+    .title-main {
+        font-size: 26px;
+        font-weight: 500;
+    }
+    .addit_info {
+        display: flex;
+        align-items: center;
+        gap: 14px;
+    }
+    .date-main,
+    .tags-main,
+    .date-light,
+    .tags-light {
+        font-size: 16px;
+    }
+    .decor {
+        height: 13px;
+    }
+    .title-light {
+        font-size: 22px;
+        font-weight: 500;
+    }
+
 }
