--- a/src/components/RecentPosts/RecentPosts.module.css
+++ b/src/components/RecentPosts/RecentPosts.module.css
@@ -23,11 +23,37 @@
     outline: none;
     cursor: pointer;
 }
-.posts_wrapper{
+.posts_wrapper {
     display: flex;
     gap: 20px;
 }
-.post_container{
+.post_container {
     background-color: white;
     padding: 25px;
+}
+
+/* adaptive */
+
+@media (max-width: 900px) {
+    .container {
+        max-width: var(--content-size-mob);
+    }
+}
+
+@media (max-width: 700px) {
+    .container {
+        padding: 0 0 38px;
+    }
+    .posts_wrapper {
+        flex-direction: column;
+    }
+    .link_to_blog {
+        display: none;
+    }
+    .heading {
+        justify-content: center;
+    }
+    .heading h2 {
+        font-size: 18px;
+    }
 }
