--- a/src/components/SingleWorkContent/SingleWorkContent.module.css
+++ b/src/components/SingleWorkContent/SingleWorkContent.module.css
@@ -21,3 +21,21 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+@media (max-width: 700px) {
+    .title {
+        font-size: 26px;
+    }
+    .subtitle {
+        font-size: 20px;
+    }
+    .img {
+        width: 100%;
+        height: 350px;
+    }
+}
+@media (max-width: 500px) {
+    .img {
+        height: 256px;
+    }
+}
