--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -4,3 +4,13 @@
     font-weight: 700;
     line-height: 60px;
 }
+
+/* adaptive */
+
+@media (max-width: 700px) {
+    .title {
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 60px;
+    }
+}
