--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -43,3 +43,26 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+/* adaptive */
+
+@media (max-width: 700px) {
+    .item {
+        flex-direction: column;
+    }
+    .picture {
+        width: 100%;
+        height: 230px;
+        object-fit: cover;
+    }
+    .title {
+        font-size: 24px;
+        line-height: 30px;
+    }
+    .year {
+        font-size: 16px;
+    }
+    .tag {
+        font-size: 16px;
+    }
+}
