--- a/src/pages/ContactPage/ContactPage.module.css
+++ b/src/pages/ContactPage/ContactPage.module.css
@@ -53,3 +53,23 @@
     width: 50%;
     object-fit: contain;
 }
+
+@media (max-width: 900px) {
+    .container {
+        max-width: var(--single-page-size-mob);
+        gap: 30px;
+    }
+}
+@media (max-width: 700px) {
+    .container {
+        padding: 60px 0;
+        justify-content: center;
+        align-items: center;
+    }
+    .form_block{
+        width: 80%;
+    }
+    .img{
+        display: none;
+    }
+}
