--- a/src/pages/SingleWorkPage/SingleWorkPage.module.css
+++ b/src/pages/SingleWorkPage/SingleWorkPage.module.css
@@ -41,3 +41,31 @@
     height: 460px;
     margin: 45px 0;
 }
+
+@media (max-width: 900px) {
+    .container {
+        max-width: var(--single-page-size-mob);
+    }
+}
+@media (max-width: 700px) {
+    .container {
+        padding: 32px 0;
+    }
+    .main_title {
+        font-size: 30px;
+    }
+    .tags {
+        font-size: 18px;
+    }
+    .main_img {
+        width: 100%;
+        height: 350px;
+        margin: 45px 0;
+    }
+}
+@media (max-width: 500px) {
+    .main_img {
+        height: 256px;
+        margin: 25px 0;
+    }
+}
