--- a/src/pages/WorksPage/WorksPage.module.css
+++ b/src/pages/WorksPage/WorksPage.module.css
@@ -12,3 +12,10 @@
     gap: 35px;
     margin-top: 25px;
 }
+
+@media (max-width: 900px) {
+    .container {
+        max-width: var(--single-page-size-mob);
+        padding: 30px 0 50px;
+    }
+}
